--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/koha2marclinks.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/koha2marclinks.tmpl
@@ -7,6 +7,7 @@
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
 
 <div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/admin/admin-home.pl">Administration</a> &rsaquo; <!-- TMPL_IF name="add_form" --><!-- TMPL_VAR name="action" --><!-- /TMPL_IF -->
 <!-- TMPL_IF name="else" -->MARC links <!-- TMPL_VAR name="tagfield" --><!-- /TMPL_IF --></div>
