--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/aqbookfund.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/aqbookfund.tmpl
@@ -1,10 +1,67 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Administration &rsaquo; Funds and Budgets</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
+<!-- TMPL_IF name="add_form" -->
+<script type="text/javascript">
+//<![CDATA[
+
+	function isNotNull(f,noalert) {
+		if (f.value.length ==0) {
+   return false;
+		}
+		return true;
+	}
+
+	function toUC(f) {
+		var x=f.value.toUpperCase();
+		f.value=x;
+		return true;
+	}
+
+	function isNum(v,maybenull) {
+	var n = new Number(v.value);
+	if (isNaN(n)) {
+		return false;
+		}
+	if (maybenull==0 && v.value=="") {
+		return false;
+	}
+	return true;
+	}
+
+	function isDate(f) {
+		var t = Date.parse(f.value);
+		if (isNaN(t)) {
+			return false;
+		}
+	}
+
+	function Check(f) {
+		var ok=1;
+		var _alertString="";
+		var alertString2;
+		if (f.bookfundid.value.length==0) {
+			_alertString += "- bookfundid missing\n";
+		}
+		if (f.bookfundname.value.length==0) {
+			_alertString += "- bookfundname missing\n";
+		}
+		if (_alertString.length==0) {
+			document.Aform.submit();
+		} else {
+			alertString2 = "Form not submitted because of the following problem(s)\n";
+			alertString2 += "------------------------------------------------------------------------------------\n\n";
+			alertString2 += _alertString;
+			alert(alertString2);
+		}
+	}
+	//]]>
+</script>
+<!-- /TMPL_IF -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
 
 <div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/admin/admin-home.pl">Administration</a> &rsaquo; Funds and Budgets </div>
 
@@ -105,62 +162,6 @@
 <!-- /TMPL_IF --> <!-- else -->
 
 <!-- TMPL_IF name="add_form" -->
-<script type="text/javascript">
-//<![CDATA[
-
-	function isNotNull(f,noalert) {
-		if (f.value.length ==0) {
-   return false;
-		}
-		return true;
-	}
-
-	function toUC(f) {
-		var x=f.value.toUpperCase();
-		f.value=x;
-		return true;
-	}
-
-	function isNum(v,maybenull) {
-	var n = new Number(v.value);
-	if (isNaN(n)) {
-		return false;
-		}
-	if (maybenull==0 && v.value=="") {
-		return false;
-	}
-	return true;
-	}
-
-	function isDate(f) {
-		var t = Date.parse(f.value);
-		if (isNaN(t)) {
-			return false;
-		}
-	}
-
-	function Check(f) {
-		var ok=1;
-		var _alertString="";
-		var alertString2;
-		if (f.bookfundid.value.length==0) {
-			_alertString += "- bookfundid missing\n";
-		}
-		if (f.bookfundname.value.length==0) {
-			_alertString += "- bookfundname missing\n";
-		}
-		if (_alertString.length==0) {
-			document.Aform.submit();
-		} else {
-			alertString2 = "Form not submitted because of the following problem(s)\n";
-			alertString2 += "------------------------------------------------------------------------------------\n\n";
-			alertString2 += _alertString;
-			alert(alertString2);
-		}
-	}
-	//]]>
-</script>
-
 <form action="<!-- TMPL_VAR name="action" -->" name="Aform" method="post">
   <input type="hidden" name="op" value="add_validate" />
   <input type="hidden" name="checked" value="0" />
