--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/aqbudget.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/aqbudget.tmpl
@@ -1,15 +1,7 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Administration &rsaquo; Budgets</title>
+<title>Koha &rsaquo; Administration &rsaquo; <!-- TMPL_IF NAME="else" -->Budgets<!-- /TMPL_IF --><!-- TMPL_IF name="add_form" -->Budgets &rsaquo; <!-- TMPL_IF NAME="aqbudgetid" -->Modify<!-- TMPL_ELSE -->Add<!-- /TMPL_IF --> Budget<!-- /TMPL_IF --><!-- TMPL_IF NAME="add_validate" -->Budgets &rsaquo; Budget Data Recorded<!-- /TMPL_IF --><!-- TMPL_IF name="delete_confirmed" -->Budgets &rsaquo; Budget Deleted<!-- /TMPL_IF --><!-- TMPL_IF name="delete_confirm" -->Budgets &rsaquo; Delete Book Budget?<!-- /TMPL_IF --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- Additions to enable Calendar system -->
-<link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-system.css" />
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar.js">//]]>
-</script>
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-en.js">//]]>
-</script>
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-setup.js">//]]>
-</script>
-<!-- End of additions -->
+<!-- TMPL_INCLUDE NAME="calendar.inc" -->
 <!-- TMPL_IF name="add_form" -->
 <script type="text/javascript">
 //<![CDATA[
@@ -70,8 +62,9 @@
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
 
-<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/admin/admin-home.pl">Administration</a> &rsaquo; Budgets</div>
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/admin/admin-home.pl">Administration</a> &rsaquo; <!-- TMPL_IF NAME="else" -->Budgets<!-- /TMPL_IF --><!-- TMPL_IF name="add_form" --><a href="/cgi-bin/koha/admin/aqbudget.pl">Budgets</a> &rsaquo; <!-- TMPL_IF NAME="aqbudgetid" -->Modify<!-- TMPL_ELSE -->Add<!-- /TMPL_IF --> Budget<!-- /TMPL_IF --><!-- TMPL_IF NAME="add_validate" --><a href="/cgi-bin/koha/admin/aqbudget.pl">Budgets</a> &rsaquo; Budget Data Recorded<!-- /TMPL_IF --><!-- TMPL_IF name="delete_confirmed" --><a href="/cgi-bin/koha/admin/aqbudget.pl">Budgets</a> &rsaquo; Budget Deleted<!-- /TMPL_IF --><!-- TMPL_IF name="delete_confirm" --><a href="/cgi-bin/koha/admin/aqbudget.pl">Budgets</a> &rsaquo; Delete Book Budget?<!-- /TMPL_IF --></div>
 
 <div id="doc3" class="yui-t2">
    
@@ -79,19 +72,20 @@
 	<div id="yui-main">
 	<div class="yui-b">
 
-<ul id="_informations">
+
 <!-- TMPL_IF NAME="add_validate" -->
-  <li>Budget Data Recorded, return to <a href="<!-- TMPL_VAR name="script_name" -->">budget list</a></li>
+  <ul id="_informations"><li>Budget Data Recorded, return to <a href="<!-- TMPL_VAR name="script_name" -->">budget list</a></li></ul>
 <!-- /TMPL_IF --> <!-- add_validate -->
 
 <!-- TMPL_IF name="delete_confirmed" -->
-  <li>Budget deleted, return to <a href="<!-- TMPL_VAR name="script_name" -->">budget list</a></li>
+  <ul id="_informations"><li>Budget deleted, return to <a href="<!-- TMPL_VAR name="script_name" -->">budget list</a></li></ul>
 <!-- /TMPL_IF --> <!-- delete_confirmed -->
-</ul>
+
 
 <!-- TMPL_IF name="else" -->
-<h1>Budget admin</h1>
+<h1>Budgets</h1>
 
+<form action="/cgi-bin/koha/admin/aqbudget.pl" method="post">
 <table>
   <tr>
     <th>Book fund</th>
@@ -102,7 +96,6 @@
     <th>Actions</th>
   </tr>
 
-<form action="/cgi-bin/koha/admin/aqbudget.pl" method="post">
   <tr class="filter">
     <td>
       <select name="filter_bookfundid">
@@ -149,7 +142,7 @@
     <!-- /TMPL_IF -->
       </select>
       <input type="text" size="10" id="filter_startdate" name="filter_startdate" value="<!-- TMPL_VAR Name="filter_startdate" -->" />
-      <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="filter_startdate_button" />
+      <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="filter_startdate_button" alt="Show Calendar" />
       <script type="text/javascript">
 //<![CDATA[
         Calendar.setup(
@@ -183,7 +176,7 @@
     <!-- /TMPL_IF -->
       </select>
       <input type="text" size="8" maxlength="10" id="filter_enddate" name="filter_enddate" value="<!-- TMPL_VAR Name="filter_enddate" -->" />
-      <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="filter_enddate_button" />
+      <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="filter_enddate_button" alt="Show Calendar" />
       <script type="text/javascript">
 //<![CDATA[
         Calendar.setup(
@@ -222,7 +215,6 @@
       <input type="submit" name="filter" value="Filter" />
     </td>
   </tr>
-</form>
   
   <!-- TMPL_LOOP name="budget" -->
     <!-- TMPL_IF NAME="toggle" -->
@@ -242,16 +234,16 @@
   </tr>
   <!-- /TMPL_LOOP --> <!-- budget -->
 </table>
+</form>
 
 <div class="paginationBar"><!-- TMPL_VAR NAME="pagination_bar" --></div>
 <!-- /TMPL_IF --> <!-- else -->
 
 <!-- TMPL_IF name="add_form" -->
 
-
 <form action="/cgi-bin/koha/admin/aqbudget.pl" name="Aform" method="post">
   <fieldset>
-    <legend>Add budget</legend>
+    <legend><!-- TMPL_IF NAME="aqbudgetid" -->Modify<!-- TMPL_ELSE -->Add<!-- /TMPL_IF --> budget</legend>
     <input type="hidden" name="op" value="add_validate" />
     <input type="hidden" name="checked" value="0" />
 
@@ -270,7 +262,7 @@
         </th>
         <td>
           <input type="text" size="8" maxlength="10" id="startdate" name="startdate" value="<!-- TMPL_VAR Name="startdate" -->" />
-          <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="startdate_button" />
+          <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="startdate_button" alt="Show Calendar" />
           <script type="text/javascript">
 //<![CDATA[
             Calendar.setup(
@@ -290,7 +282,7 @@
         </th>
         <td>
           <input type="text" size="8" maxlength="10" id="enddate" name="enddate" value="<!-- TMPL_VAR Name="enddate" -->" />
-          <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="enddate_button" alt="" />
+          <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="enddate_button" alt="Show Calendar" />
           <script type="text/javascript">
 //<![CDATA[
             Calendar.setup(
@@ -320,7 +312,7 @@
   <!-- TMPL_IF NAME="disable_branchselection" -->
           <!-- Pierrick's note: I've found that a disabled select was not -->
           <!-- giving its value to Perl :-/ So I use a hidden field trick -->
-          <input type="hidden" name="branch" value="<!-- TMPL_VAR NAME="branch" -->" />
+          <input type="hidden" name="branch" id="branch" value="<!-- TMPL_VAR NAME="branch" -->" />
           <select name="branch" disabled="disabled">
   <!-- TMPL_ELSE -->
           <select name="branch">
