--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/auth_tag_structure.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/auth_tag_structure.tmpl
@@ -1,5 +1,8 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Administration &rsaquo; Authority MARC framework</title>
+<title>Koha &rsaquo; Administration &rsaquo; Authority MARC framework <!-- TMPL_IF NAME="add_form" --><!-- TMPL_IF NAME="use-heading-flags-p" -->
+    <!-- TMPL_IF NAME="heading-modify-tag-p" -->&rsaquo; Modify tag<!-- /TMPL_IF -->
+    <!-- TMPL_IF NAME="heading-add-tag-p" -->&rsaquo; Add tag<!-- /TMPL_IF -->
+    <!-- TMPL_ELSE -->&rsaquo; <!-- TMPL_VAR NAME="action" --><!-- /TMPL_IF --><!-- /TMPL_IF --><!-- TMPL_IF NAME="delete_confirm" -->&rsaquo; Confirm Deletion<!-- /TMPL_IF --><!-- TMPL_IF NAME="delete_confirmed" -->&rsaquo; Data Deleted<!-- /TMPL_IF --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <script type="text/javascript">
 //<![CDATA[
@@ -56,8 +59,12 @@ return false;
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
 
-<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/admin/admin-home.pl">Administration</a> &rsaquo; Authority MARC framework</div>
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/admin/admin-home.pl">Administration</a> &rsaquo; <!-- TMPL_IF NAME="add_form" --><!-- TMPL_IF NAME="use-heading-flags-p" -->
+    <!-- TMPL_IF NAME="heading-modify-tag-p" --><a href="/cgi-bin/koha/admin/auth_tag_structure.pl">Authority MARC Framework</a> &rsaquo; Modify tag<!-- /TMPL_IF -->
+    <!-- TMPL_IF NAME="heading-add-tag-p" --><a href="/cgi-bin/koha/admin/auth_tag_structure.pl">Authority MARC Framework</a> &rsaquo; Add tag<!-- /TMPL_IF -->
+    <!-- TMPL_ELSE --><a href="/cgi-bin/koha/admin/auth_tag_structure.pl">Authority MARC Framework</a> &rsaquo; <!-- TMPL_VAR NAME="action" --><!-- /TMPL_IF --><!-- TMPL_ELSE --><!-- TMPL_IF NAME="delete_confirm" --><a href="/cgi-bin/koha/admin/auth_tag_structure.pl">Authority MARC Framework</a> &rsaquo; Confirm Deletion<!-- TMPL_ELSE --><!-- TMPL_IF NAME="delete_confirmed" --><a href="/cgi-bin/koha/admin/auth_tag_structure.pl">Authority MARC Framework</a> &rsaquo; Data Deleted<!-- TMPL_ELSE -->Authority MARC Framework<!-- /TMPL_IF --><!-- /TMPL_IF --><!-- /TMPL_IF --></div>
 
 <div id="doc3" class="yui-t2">
    
@@ -88,7 +95,6 @@ return false;
             <!-- TMPL_ELSE -->
                 <input type="checkbox" name="repeatable" id="repeatable" value="1" />
             <!-- /TMPL_IF -->
-            &nbsp;
         </p>
         <p><label for="mandatory">Mandatory</label>
             <!-- TMPL_IF NAME="mandatory" -->
@@ -96,16 +102,15 @@ return false;
             <!-- TMPL_ELSE -->
                 <input type="checkbox" name="mandatory" id="mandatory" value="1" />
             <!-- /TMPL_IF -->
-            &nbsp;
             </p>
         <p><label>Authorised value</label><!-- TMPL_VAR NAME="authorised_value" --> (if you select a value here, the indicators will be limited to the authorised value list)</p>
-        <p><label>&nbsp;</label><input type="button" value="OK" class="button" onclick="Check(this.form)" /></p>
+        <p><input type="button" value="OK" class="button" onclick="Check(this.form)" /></p>
     </form>
 <!-- /TMPL_IF -->
 
 
 <!-- TMPL_IF NAME="delete_confirm" -->
-
+<h3>Confirm Deletion</h3>
 <table>
     <tr>
         <td>tag</td>
@@ -114,17 +119,17 @@ return false;
     <tr>
         <td>&nbsp;</td><td><!-- TMPL_VAR NAME="liblibrarian" --></td>
     </tr>
-    <form action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
+    
+    <tr><td><form action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
         <input type="hidden" name="op" value="delete_confirmed" />
         <input type="hidden" name="authtypecode" value="<!-- TMPL_VAR name="authtypecode" -->" />
-        <input type="hidden" name="searchfield" value="<!-- TMPL_VAR NAME="searchfield" -->" />
-    <tr><td colspan="2" align="center">CONFIRM DELETION</td></tr>
-    <tr><td><input type="submit" value="YES"></form></td><td><form action="<!-- TMPL_VAR NAME="script_name" -->" method="post"><input type="submit" value="NO" class="submit" /></form></td></tr>
+        <input type="hidden" name="searchfield" value="<!-- TMPL_VAR NAME="searchfield" -->" /><input type="submit" value="YES"></form></td><td><form action="<!-- TMPL_VAR NAME="script_name" -->" method="post"><input type="submit" value="NO" class="submit" /></form></td></tr>
+</table>
 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF NAME="delete_confirmed" -->
 
-    Data deleted
+    <h3>Data deleted</h3>
     <form action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
     <input type="hidden" name="authtypecode" value="<!-- TMPL_VAR name="authtypecode" -->" />
     <input type="hidden" name="searchfield" value="<!-- TMPL_VAR NAME="searchfield" -->" />
@@ -175,8 +180,9 @@ return false;
         <th>Subfields</th>
         <th>Edit</th>
         <th>Delete</th>
+	</tr>
     <!-- TMPL_LOOP NAME="loop" -->
-    <tr valign="top" bgcolor="<!-- TMPL_VAR NAME="bgcolor" -->">
+		<!-- TMPL_IF NAME="toggle" --><tr class="highlight"><!-- TMPL_ELSE --><tr><!-- /TMPL_IF -->
         <td><b><!-- TMPL_VAR NAME="tagfield" --></b></td>
         <td><!-- TMPL_VAR NAME="liblibrarian" --></td>
         <td><!-- TMPL_IF NAME="repeatable" -->Yes<!-- TMPL_ELSE -->No<!-- /TMPL_IF --></td>
