--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/checkmarc.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/checkmarc.tmpl
@@ -1,13 +1,14 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
 <title>Koha &rsaquo; Administration &rsaquo; MARC Check
-<!-- TMPL_IF name="total" --> &rsaquo; <!-- TMPL_VAR name="total" --> errors found<!-- TMPL_ELSE --> &rsaquo; Configuration OK!<!-- /TMPL_IF --></title>
+<!-- TMPL_IF name="total" --> :<!-- TMPL_VAR name="total" --> errors found<!-- TMPL_ELSE --> : Configuration OK!<!-- /TMPL_IF --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
 
 <div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/admin/admin-home.pl">Administration</a> &rsaquo; MARC Check
-<!-- TMPL_IF name="total" --> &rsaquo; <!-- TMPL_VAR name="total" --> errors found<!-- TMPL_ELSE --> &rsaquo; Configuration OK!<!-- /TMPL_IF --></div>
+<!-- TMPL_IF name="total" -->: <!-- TMPL_VAR name="total" --> errors found<!-- TMPL_ELSE --> : Configuration OK!<!-- /TMPL_IF --></div>
 
 <div id="doc3" class="yui-t2">
    
@@ -15,7 +16,7 @@
 	<div id="yui-main">
 	<div class="yui-b">
 
-<h1>MARC Checking</h1>
+<h1>MARC Bibliographic Framework Test</h1>
 <table>
     <tr>
         <th>Test</th>
