--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/cities.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/cities.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Administration &rsaquo; Cities</title>
+<title>Koha &rsaquo; Administration &rsaquo; <!-- TMPL_IF NAME="add_form" -->Cities &rsaquo; <!-- TMPL_IF NAME="cityid" --> Modify City<!-- TMPL_ELSE --> Add City<!-- /TMPL_IF --><!-- TMPL_ELSE --><!-- TMPL_IF NAME="delete_confirm" -->Cities &rsaquo; Confirm Deletion of City<!-- TMPL_ELSE --> Cities<!-- /TMPL_IF --><!-- /TMPL_IF --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <script type="text/javascript">
 //<![CDATA[
@@ -52,8 +52,9 @@
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
+<!-- TMPL_INCLUDE NAME="cities-admin-menu.inc" -->
 
-<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/admin/admin-home.pl">Administration</a> &rsaquo; Cities</div>
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/admin/admin-home.pl">Administration</a> &rsaquo; <!-- TMPL_IF NAME="add_form" --><a href="/cgi-bin/koha/admin/cities.pl">Cities</a> &rsaquo; <!-- TMPL_IF NAME="cityid" --> Modify City<!-- TMPL_ELSE --> Add City<!-- /TMPL_IF --><!-- TMPL_ELSE --><!-- TMPL_IF NAME="delete_confirm" --><a href="/cgi-bin/koha/admin/cities.pl">Cities</a> &rsaquo; Confirm Deletion of City<!-- TMPL_ELSE --> Cities<!-- /TMPL_IF --><!-- /TMPL_IF --></div>
 
 <div id="doc3" class="yui-t2">
    
@@ -69,9 +70,9 @@
 	<!-- /TMPL_IF -->
 
 	<form action="<!-- TMPL_VAR NAME="script_name" -->" name="Aform" method="post">
-	<input type="hidden" name="op" value="add_validate">
-	<input type="hidden" name="checked" value="0">
-	<input type="hidden" name="cityid" value="<!-- TMPL_VAR NAME="cityid" -->">
+	<input type="hidden" name="op" value="add_validate" />
+	<input type="hidden" name="checked" value="0" />
+	<input type="hidden" name="cityid" value="<!-- TMPL_VAR NAME="cityid" -->" />
 
 	<!-- TMPL_IF NAME="cityid" -->
 		<p class="p_borrowers">
@@ -82,22 +83,21 @@
 	<!-- /TMPL_IF -->
 	<p>
 	<label>City name</label>
-	<input  type="text" name="city_name" size="40" maxlength="80" value="<!-- TMPL_VAR NAME="city_name" ESCAPE="HTML" -->">&nbsp;
+	<input  type="text" name="city_name" size="40" maxlength="80" value="<!-- TMPL_VAR NAME="city_name" ESCAPE="HTML" -->" />
 	</p>
 	<p>				
 	<label>City zipcode</label>
-	<input type="text" name="city_zipcode" size="10" maxlength="10" value="<!-- TMPL_VAR NAME="city_zipcode" -->">
+	<input type="text" name="city_zipcode" size="10" maxlength="10" value="<!-- TMPL_VAR NAME="city_zipcode" -->" />
 	</p>
 	
 	<p>
-	<div >
-		<input class="button" type="button" onclick="Check(this.form)" value="OK">
-	</div>	
+		<input class="button" type="button" onclick="Check(this.form)" value="OK" />
 	</p>
 	</form>
 
 <!-- /TMPL_IF -->
 <!-- TMPL_IF NAME="delete_confirm" -->
+<h3>Confirm Deletion of City</h3>
 	<table>
 		<tr>
 			<td>
@@ -107,17 +107,14 @@
 				<!-- TMPL_VAR NAME="cityid" -->
 			</td>
 		</tr>
-		<form action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
-			<input type="hidden" name="op" value="delete_confirmed">
-			<input type="hidden" name="cityid" value="<!-- TMPL_VAR NAME="cityid" -->">        
+		        
 		<tr>
-			<td>city name</td>
+			<td>City name</td>
 			<td><!-- TMPL_VAR NAME="city_name" --></td>
 		</tr>
 		<tr>
 			<td>City zipcode</td>
 			<td><!-- TMPL_VAR NAME="city_zipcode" --></td>
-		</tr>
 		</tr>
 		<!-- TMPL_IF NAME="totalgtzero" -->
 		<tr>
@@ -125,19 +122,18 @@
 		</tr>
 	<tr>
 			<td colspan="2">
-				</form><form action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
-				<input type="submit" value="OK">
+				<form action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
+				<input type="submit" value="OK" />
 				</form>
 			</td>
 		</tr>
 		<!-- TMPL_ELSE -->
 		<tr>
-			<td colspan="2" align="center">confirm deletion</td>
-		</tr>
-		<tr>
-			<td><input type="submit" value="YES"></form></td>
 			<td><form action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
-			<input type="submit" value="NO"></form></td>
+			<input type="hidden" name="op" value="delete_confirmed" />
+			<input type="hidden" name="cityid" value="<!-- TMPL_VAR NAME="cityid" -->" /><input type="submit" value="YES" /></form></td>
+			<td><form action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
+			<input type="submit" value="NO" /></form></td>
 		</tr>
 		<!-- /TMPL_IF -->
 </table>
@@ -148,10 +144,6 @@
 	<!-- TMPL_IF NAME="searchfield" -->
 		Searching: <!-- TMPL_VAR NAME="searchfield" -->
 	<!-- /TMPL_IF -->
-	<form action="<TMPL_VAR NAME="script_name">" method="post">
-		<input type="text" name="city_name" value="<!-- TMPL_VAR NAME="searchfield" -->">
-		<input type="submit" name="submit" value="OK" class="button">
-	</form>
 
 	<table>
 		<tr>
@@ -178,10 +170,10 @@
 		<!-- /TMPL_LOOP -->
 
 	</table>
-	<p><form action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
+	<form action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
 		<input type="hidden" name="op" value="add_form" />
-		<input type="submit" class="button" value="Add a city"  alt="Add city" /><br />
-	</form></p>
+		<p><input type="submit" class="button" value="Add a city"  alt="Add city" /></p>
+	</form>
 <!-- /TMPL_IF -->
 
 </div>
