--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/issuingrules.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/issuingrules.tmpl
@@ -4,6 +4,7 @@
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
 
 <div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/admin/admin-home.pl">Administration</a> &rsaquo;  Issuing Rules</div>
 
