--- a/koha-tmpl/intranet-tmpl/prog/en/modules/admin/roadtype.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/admin/roadtype.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Administration &rsaquo; Road Types</title>
+<title>Koha &rsaquo; Administration &rsaquo; <!-- TMPL_IF NAME="add_form" -->Road Types &rsaquo; <!-- TMPL_IF NAME="roadtypeid" --> Modify Road Type<!-- TMPL_ELSE --> Add Road Type<!-- /TMPL_IF --><!-- TMPL_ELSE --><!-- TMPL_IF NAME="delete_confirm" -->Road Types &rsaquo; Confirm Deletion of Road Type<!-- TMPL_ELSE --> Road Type<!-- /TMPL_IF --><!-- /TMPL_IF --></title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <script type="text/javascript">
 //<![CDATA[
@@ -52,8 +52,8 @@
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-
-<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/admin/admin-home.pl">Administration</a> &rsaquo; Road Types</div>
+<!-- TMPL_INCLUDE NAME="roadtype-admin-menu.inc" -->
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/admin/admin-home.pl">Administration</a> &rsaquo; <!-- TMPL_IF NAME="add_form" --><a href="/cgi-bin/koha/admin/roadtype.pl">Road Types</a> &rsaquo; <!-- TMPL_IF NAME="roadtypeid" --> Modify Road Type<!-- TMPL_ELSE --> Add Road Type<!-- /TMPL_IF --><!-- TMPL_ELSE --><!-- TMPL_IF NAME="delete_confirm" --><a href="/cgi-bin/koha/admin/roadtype.pl">Road Types</a> &rsaquo; Confirm Deletion of Road Type<!-- TMPL_ELSE --> Road Type<!-- /TMPL_IF --><!-- /TMPL_IF --></div>
 
 <div id="doc3" class="yui-t2">
    
@@ -62,7 +62,7 @@
 	<div class="yui-b">
 
 <!-- TMPL_IF NAME="add_form" -->
-	<!-- TMPL_IF NAME="id_city" -->
+	<!-- TMPL_IF NAME="roadtypeid" -->
 		<h1>Modify road type</h1>
 	<!-- TMPL_ELSE -->
 		<h1>Add road type</h1>
@@ -76,7 +76,6 @@
 <!-- TMPL_IF NAME="roadtypeid" -->
 
 	<p>
-
 	<label>Road type</label>
 	<label><b><!-- TMPL_VAR NAME="roadtypeid" --></b></label>
 	</p>
@@ -90,33 +89,26 @@
 	</p>
 	
 	<p>					  
-	<div >
-		<input class="button" type="button" onclick="Check(this.form)" value="OK" />
-	</div>	
+	<input class="button" type="button" onclick="Check(this.form)" value="OK" />	
 	</p>
 	</form>
 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF NAME="delete_confirm" -->
+	<h3>Confirm Deletion of Road Type</h3>
 	<table>
 		<tr>
 			<th>Road type id </th>
-			<td>
-				<!-- TMPL_VAR NAME="roadtypeid" -->
-			</td>
+			<td><!-- TMPL_VAR NAME="roadtypeid" --></td>
 		</tr>
-		<form action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
-			<input type="hidden" name="op" value="delete_confirmed" />
-			<input type="hidden" name="roadtypeid" value="<!-- TMPL_VAR NAME="roadtypeid" -->" />
 		<tr>
-			<td>Road type</td>
+			<th>Road type</th>
 			<td><!-- TMPL_VAR NAME="road_type" --></td>
 		</tr>
 		<tr>
-			<td colspan="2" align="center">Confirm deletion</td>
-		</tr>
-		<tr>
-			<td><input type="submit" value="YES" /></form></td>
+			<td><form action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
+			<input type="hidden" name="op" value="delete_confirmed" />
+			<input type="hidden" name="roadtypeid" value="<!-- TMPL_VAR NAME="roadtypeid" -->" /><input type="submit" value="YES" /></form></td>
 			<td><form action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
 			<input type="submit" value="NO" /></form></td>
 		</tr>	
@@ -128,16 +120,12 @@
 	<!-- TMPL_IF NAME="searchfield" -->
 		Search on  <!-- TMPL_VAR NAME="searchfield" -->
 	<!-- /TMPL_IF -->
-	<form action="<TMPL_VAR NAME="script_name">" method="post">
-		<input type="text" name="road_type" value="<!-- TMPL_VAR NAME="searchfield" -->" />
-		<input type="submit" name="submit" value="OK" class="button" />
-	</form>
+
 
 	<table>
 		<tr>
 			<th>Road type</th>
-			<th>&nbsp;</th>
-			<th>&nbsp;</th>
+			<th colspan="2">&nbsp;</th>
 		</tr>
 		<!-- TMPL_LOOP NAME="loop" -->
 		<!-- TMPL_IF NAME="toggle" -->
@@ -146,8 +134,8 @@
 		<tr>
 		<!-- /TMPL_IF -->
 			<td><!-- TMPL_VAR NAME="road_type" --></td>
-			<td><a href="<!-- TMPL_VAR NAME="script_name" -->?op=add_form&amp;roadtypeid=<!-- TMPL_VAR NAME="roadtypeid" -->">edit</a></td>
-			<td><a href="<!-- TMPL_VAR NAME="script_name" -->?op=delete_confirm&amp;roadtypeid=<!-- TMPL_VAR NAME="roadtypeid" -->">delete</a></td>
+			<td><a href="<!-- TMPL_VAR NAME="script_name" -->?op=add_form&amp;roadtypeid=<!-- TMPL_VAR NAME="roadtypeid" -->">Edit</a></td>
+			<td><a href="<!-- TMPL_VAR NAME="script_name" -->?op=delete_confirm&amp;roadtypeid=<!-- TMPL_VAR NAME="roadtypeid" -->">Delete</a></td>
 		</tr>
 		<!-- /TMPL_LOOP -->
 
